Lab2/Code/syntax.output
State 50 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | error

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: %empty
   15       | ID

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP error RP

   22 VarList: ParamDec COMMA VarList
   23        | ParamDec

   24 ParamDec: Specifier VarDec

   25 CompSt: LC DefList StmtList RC
   26       | error

   27 StmtList: %empty
   28         | Stmt StmtList

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | error SEMI

   36 DefList: %empty
   37        | Def DefList

   38 Def: Specifier DecList SEMI
   39    | Specifier error SEMI

   40 DecList: Dec
   41        | Dec COMMA DecList

   42 Dec: VarDec
   43    | VarDec ASSIGNOP Exp

   44 Exp: Exp ASSIGNOP Exp
   45    | Exp AND Exp
   46    | Exp OR Exp
   47    | Exp RELOP Exp
   48    | Exp PLUS Exp
   49    | Exp MINUS Exp
   50    | Exp STAR Exp
   51    | Exp DIV Exp
   52    | LP Exp RP
   53    | MINUS Exp
   54    | NOT Exp
   55    | ID LP Args RP
   56    | ID LP RP
   57    | Exp LB Exp RB
   58    | Exp DOT ID
   59    | ID
   60    | INT
   61    | FLOAT
   62    | error

   63 Args: Exp COMMA Args
   64     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 21 26 35 39 62
    INT <pnode> (258) 18 60
    FLOAT <pnode> (259) 61
    ID <pnode> (260) 15 16 17 19 20 21 55 56 58 59
    SEMI <pnode> (261) 4 5 29 31 35 38 39
    COMMA <pnode> (262) 9 22 41 63
    TYPE <pnode> (263) 10
    LC <pnode> (264) 12 25
    RC <pnode> (265) 12 25
    STRUCT <pnode> (266) 12 13
    RETURN <pnode> (267) 31
    IF <pnode> (268) 32 33
    ELSE <pnode> (269) 33
    WHILE <pnode> (270) 34
    ASSIGNOP <pnode> (271) 43 44
    OR <pnode> (272) 46
    AND <pnode> (273) 45
    RELOP <pnode> (274) 47
    PLUS <pnode> (275) 48
    MINUS <pnode> (276) 49 53
    STAR <pnode> (277) 50
    DIV <pnode> (278) 51
    NOT <pnode> (279) 54
    LP <pnode> (280) 19 20 21 32 33 34 52 55 56
    RP <pnode> (281) 19 20 21 32 33 34 52 55 56
    LB <pnode> (282) 18 57
    RB <pnode> (283) 18 57
    DOT <pnode> (284) 58
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <pnode> (32)
        on left: 1
        on right: 0
    ExtDefList <pnode> (33)
        on left: 2 3
        on right: 1 3
    ExtDef <pnode> (34)
        on left: 4 5 6 7
        on right: 3
    ExtDecList <pnode> (35)
        on left: 8 9
        on right: 4 9
    Specifier <pnode> (36)
        on left: 10 11
        on right: 4 5 6 24 38 39
    StructSpecifier <pnode> (37)
        on left: 12 13
        on right: 11
    OptTag <pnode> (38)
        on left: 14 15
        on right: 12
    Tag <pnode> (39)
        on left: 16
        on right: 13
    VarDec <pnode> (40)
        on left: 17 18
        on right: 8 9 18 24 42 43
    FunDec <pnode> (41)
        on left: 19 20 21
        on right: 6
    VarList <pnode> (42)
        on left: 22 23
        on right: 19 22
    ParamDec <pnode> (43)
        on left: 24
        on right: 22 23
    CompSt <pnode> (44)
        on left: 25 26
        on right: 6 30
    StmtList <pnode> (45)
        on left: 27 28
        on right: 25 28
    Stmt <pnode> (46)
        on left: 29 30 31 32 33 34 35
        on right: 28 32 33 34
    DefList <pnode> (47)
        on left: 36 37
        on right: 12 25 37
    Def <pnode> (48)
        on left: 38 39
        on right: 37
    DecList <pnode> (49)
        on left: 40 41
        on right: 38 41
    Dec <pnode> (50)
        on left: 42 43
        on right: 40 41
    Exp <pnode> (51)
        on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62
        on right: 29 31 32 33 34 43 44 45 46 47 48 49 50 51 52 53 54 57 58 63 64
    Args <pnode> (52)
        on left: 63 64
        on right: 55 63


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    7 ExtDef: error .

    $default  reduce using rule 7 (ExtDef)


State 2

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 3

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag

    ID  shift, and go to state 9

    $default  reduce using rule 14 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    3 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt

    ID    shift, and go to state 14
    SEMI  shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 8

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 9

   15 OptTag: ID .
   16 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 16 (Tag)


State 10

   12 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


State 11

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 14

   17 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP error RP

    LP  shift, and go to state 20

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 21


State 17

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   18 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 24
    LC     shift, and go to state 25

    CompSt  go to state 26


State 19

   12 StructSpecifier: STRUCT OptTag LC . DefList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 28
    Def              go to state 29


State 20

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . error RP

    error   shift, and go to state 30
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 31

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 33
    ParamDec         go to state 34


State 21

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 22

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


State 23

   18 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


State 24

   26 CompSt: error .

    $default  reduce using rule 26 (CompSt)


State 25

   25 CompSt: LC . DefList StmtList RC

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 38
    Def              go to state 29


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   38 Def: Specifier . DecList SEMI
   39    | Specifier . error SEMI

    error  shift, and go to state 39
    ID     shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 43


State 29

   37 DefList: Def . DefList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $default  reduce using rule 36 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 8
    DefList          go to state 44
    Def              go to state 29


State 30

   21 FunDec: ID LP error . RP

    RP  shift, and go to state 45


State 31

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 32

   24 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 46


State 33

   19 FunDec: ID LP VarList . RP

    RP  shift, and go to state 47


State 34

   22 VarList: ParamDec . COMMA VarList
   23        | ParamDec .

    COMMA  shift, and go to state 48

    $default  reduce using rule 23 (VarList)


State 35

   17 VarDec: ID .

    $default  reduce using rule 17 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 37

   18 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 49


State 38

   25 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    LC      shift, and go to state 25
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 61
    Stmt      go to state 62
    Exp       go to state 63


State 39

   39 Def: Specifier error . SEMI

    SEMI  shift, and go to state 64


State 40

   18 VarDec: VarDec . LB INT RB
   42 Dec: VarDec .
   43    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 23

    $default  reduce using rule 42 (Dec)


State 41

   38 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 42

   40 DecList: Dec .
   41        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 40 (DecList)


State 43

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 44

   37 DefList: Def DefList .

    $default  reduce using rule 37 (DefList)


State 45

   21 FunDec: ID LP error RP .

    $default  reduce using rule 21 (FunDec)


State 46

   18 VarDec: VarDec . LB INT RB
   24 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 24 (ParamDec)


State 47

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 48

   22 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 32
    StructSpecifier  go to state 8
    VarList          go to state 68
    ParamDec         go to state 34


State 49

   18 VarDec: VarDec LB INT RB .

    $default  reduce using rule 18 (VarDec)


State 50

   26 CompSt: error .
   35 Stmt: error . SEMI
   62 Exp: error .

    SEMI  shift, and go to state 69

    SEMI      [reduce using rule 62 (Exp)]
    ASSIGNOP  reduce using rule 62 (Exp)
    OR        reduce using rule 62 (Exp)
    AND       reduce using rule 62 (Exp)
    RELOP     reduce using rule 62 (Exp)
    PLUS      reduce using rule 62 (Exp)
    MINUS     reduce using rule 26 (CompSt)
    MINUS     [reduce using rule 62 (Exp)]
    STAR      reduce using rule 62 (Exp)
    DIV       reduce using rule 62 (Exp)
    LB        reduce using rule 62 (Exp)
    DOT       reduce using rule 62 (Exp)
    $default  reduce using rule 26 (CompSt)


State 51

   60 Exp: INT .

    $default  reduce using rule 60 (Exp)


State 52

   61 Exp: FLOAT .

    $default  reduce using rule 61 (Exp)


State 53

   55 Exp: ID . LP Args RP
   56    | ID . LP RP
   59    | ID .

    LP  shift, and go to state 70

    $default  reduce using rule 59 (Exp)


State 54

   31 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 72


State 55

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 73


State 56

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 74


State 57

   53 Exp: MINUS . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 75


State 58

   54 Exp: NOT . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 76


State 59

   52 Exp: LP . Exp RP

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 77


State 60

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


State 61

   25 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 78


State 62

   28 StmtList: Stmt . StmtList

    error   shift, and go to state 50
    INT     shift, and go to state 51
    FLOAT   shift, and go to state 52
    ID      shift, and go to state 53
    LC      shift, and go to state 25
    RETURN  shift, and go to state 54
    IF      shift, and go to state 55
    WHILE   shift, and go to state 56
    MINUS   shift, and go to state 57
    NOT     shift, and go to state 58
    LP      shift, and go to state 59

    RC  reduce using rule 27 (StmtList)

    CompSt    go to state 60
    StmtList  go to state 79
    Stmt      go to state 62
    Exp       go to state 63


State 63

   29 Stmt: Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    SEMI      shift, and go to state 80
    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    LB        shift, and go to state 89
    DOT       shift, and go to state 90


State 64

   39 Def: Specifier error SEMI .

    $default  reduce using rule 39 (Def)


State 65

   43 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 91


State 66

   38 Def: Specifier DecList SEMI .

    $default  reduce using rule 38 (Def)


State 67

   41 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 40
    DecList  go to state 92
    Dec      go to state 42


State 68

   22 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 22 (VarList)


State 69

   35 Stmt: error SEMI .

    $default  reduce using rule 35 (Stmt)


State 70

   55 Exp: ID LP . Args RP
   56    | ID LP . RP

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59
    RP     shift, and go to state 93

    Exp   go to state 94
    Args  go to state 95


State 71

   62 Exp: error .

    $default  reduce using rule 62 (Exp)


State 72

   31 Stmt: RETURN Exp . SEMI
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    SEMI      shift, and go to state 96
    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    LB        shift, and go to state 89
    DOT       shift, and go to state 90


State 73

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 97


State 74

   34 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 98


State 75

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   53    | MINUS Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    LB    shift, and go to state 89
    DOT   shift, and go to state 90

    $default  reduce using rule 53 (Exp)


State 76

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   54    | NOT Exp .
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    LB   shift, and go to state 89
    DOT  shift, and go to state 90

    $default  reduce using rule 54 (Exp)


State 77

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   52    | LP Exp . RP
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    RP        shift, and go to state 99
    LB        shift, and go to state 89
    DOT       shift, and go to state 90


State 78

   25 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 25 (CompSt)


State 79

   28 StmtList: Stmt StmtList .

    $default  reduce using rule 28 (StmtList)


State 80

   29 Stmt: Exp SEMI .

    $default  reduce using rule 29 (Stmt)


State 81

   44 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 100


State 82

   46 Exp: Exp OR . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 101


State 83

   45 Exp: Exp AND . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 102


State 84

   47 Exp: Exp RELOP . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 103


State 85

   48 Exp: Exp PLUS . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 104


State 86

   49 Exp: Exp MINUS . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 105


State 87

   50 Exp: Exp STAR . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 106


State 88

   51 Exp: Exp DIV . Exp

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 107


State 89

   57 Exp: Exp LB . Exp RB

    error  shift, and go to state 71
    INT    shift, and go to state 51
    FLOAT  shift, and go to state 52
    ID     shift, and go to state 53
    MINUS  shift, and go to state 57
    NOT    shift, and go to state 58
    LP     shift, and go to state 59

    Exp  go to state 108


State 90

   58 Exp: Exp DOT . ID

    ID  shift, and go to state 109


State 91

   43 Dec: VarDec ASSIGNOP Exp .
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    LB        shift, and go to state 89
    DOT       shift, and go to state 90

    $default  reduce using rule 43 (Dec)


State 92

   41 DecList: Dec COMMA DecList .

    $default  reduce using rule 41 (DecList)


State 93

   56 Exp: ID LP RP .

    $default  reduce using rule 56 (Exp)


State 94

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID
   63 Args: Exp . COMMA Args
   64     | Exp .

    COMMA     shift, and go to state 110
    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    LB        shift, and go to state 89
    DOT       shift, and go to state 90

    $default  reduce using rule 64 (Args)


State 95

   55 Exp: ID LP Args . RP

    RP  shift, and go to state 111


State 96

   31 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 97

   32 Stmt: IF LP Exp . RP Stmt
   33     | IF LP Exp . RP Stmt ELSE Stmt
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    RP        shift, and go to state 112
    LB        shift, and go to state 89
    DOT       shift, and go to state 90


State 98

   34 Stmt: WHILE LP Exp . RP Stmt
   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    RP        shift, and go to state 113
    LB        shift, and go to state 89
    DOT       shift, and go to state 90


State 99

   52 Exp: LP Exp RP .

    $default  reduce using rule 52 (Exp)


State 100

   44 Exp: Exp . ASSIGNOP Exp
   44    | Exp ASSIGNOP Exp .
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 81
    OR        shift, and go to state 82
    AND       shift, and go to state 83
    RELOP     shift, and go to state 84
    PLUS      shift, and go to state 85
    MINUS     shift, and go to state 86
    STAR      shift, and go to state 87
    DIV       shift, and go to state 88
    LB        shift, and go to state 89
    DOT       shift, and go to state 90

    $default  reduce using rule 44 (Exp)


State 101

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   46    | Exp OR Exp .
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    AND    shift, and go to state 83
    RELOP  shift, and go to state 84
    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    LB     shift, and go to state 89
    DOT    shift, and go to state 90

    $default  reduce using rule 46 (Exp)


State 102

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   45    | Exp AND Exp .
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    RELOP  shift, and go to state 84
    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    LB     shift, and go to state 89
    DOT    shift, and go to state 90

    $default  reduce using rule 45 (Exp)


State 103

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   47    | Exp RELOP Exp .
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    PLUS   shift, and go to state 85
    MINUS  shift, and go to state 86
    STAR   shift, and go to state 87
    DIV    shift, and go to state 88
    LB     shift, and go to state 89
    DOT    shift, and go to state 90

    $default  reduce using rule 47 (Exp)


State 104

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   48    | Exp PLUS Exp .
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    LB    shift, and go to state 89
    DOT   shift, and go to state 90

    $default  reduce using rule 48 (Exp)


State 105

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   49    | Exp MINUS Exp .
   50    | Exp . STAR Exp
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    STAR  shift, and go to state 87
    DIV   shift, and go to state 88
    LB    shift, and go to state 89
    DOT   shift, and go to state 90

    $default  reduce using rule 49 (Exp)


State 106

   44 Exp: Exp . ASSIGNOP Exp
   45    | Exp . AND Exp
   46    | Exp . OR Exp
   47    | Exp . RELOP Exp
   48    | Exp . PLUS Exp
   49    | Exp . MINUS Exp
   50    | Exp . STAR Exp
   50    | Exp STAR Exp .
   51    | Exp . DIV Exp
   57    | Exp . LB Exp RB
   58    | Exp . DOT ID

    LB   shift, and go to state 89
    DOT  shift, and go to state 90
